tags and catagories

--- a/blog/templates/blog/blog_index_page.html
+++ b/blog/templates/blog/blog_index_page.html
@@ -9,7 +9,7 @@
 
     <div class="intro">{{ page.intro|richtext }}</div>
 
-{% for post in blogpages %}
+{% for post in articlepages %}
     {% with post=post.specific %}
         <h2><a href="{% pageurl post %}">{{ post.title }}</a></h2>
 
