--- a/blog/templates/blog/article_page.html
+++ b/blog/templates/blog/article_page.html
@@ -8,6 +8,29 @@
     <h1>{{ page.title }}</h1>
     <p class="meta">{{ page.date }}</p>
 
+    {% with categories=page.categories.all %}
+    {% if categories %}
+        <h3>Posted in:</h3>
+        <ul>
+            {% for category in categories %}
+                <li style="display: inline">
+                    {% image category.icon fill-32x32 style="vertical-align: middle" %}
+                    {{ category.name }}
+                </li>
+            {% endfor %}
+        </ul>
+        {% endif %}
+    {% endwith %}
+
+    {% if page.tags.all.count %}
+        <div class="tags">
+            <h3>Tags</h3>
+            {% for tag in page.tags.all %}
+                <a href="{% slugurl 'tags' %}?tag={{ tag }}"><button type="button">{{ tag }}</button></a>
+            {% endfor %}
+        </div>
+    {% endif %}
+
     {% with page.main_image as main_image %}
         {% if main_image %}{% image main_image fill-160x100 %}{% endif %}
     {% endwith %}
