--- a/blog/templates/blog/blog_index_page.html
+++ b/blog/templates/blog/blog_index_page.html
@@ -9,16 +9,16 @@
 
     <div class="intro">{{ page.intro|richtext }}</div>
 
-{% for post in articlepages %}
-    {% with post=post.specific %}
-        <h2><a href="{% pageurl post %}">{{ post.title }}</a></h2>
+{% for article in articlepages %}
+    {% with article=article.specific %}
+        <h2><a href="{% pageurl article %}">{{ article.title }}</a></h2>
 
-        {% with post.main_image as main_image %}
+        {% with article.main_image as main_image %}
             {% if main_image %}{% image main_image fill-160x100 %}{% endif %}
         {% endwith %}
 
-        <p>{{ post.intro }}</p>
-        {{ post.body|richtext }}
+        <p>{{ article.intro }}</p>
+        {{ article.body|richtext }}
     {% endwith %}
 {% endfor %}
 
