--- a/home/templates/home/home_page.html
+++ b/home/templates/home/home_page.html
@@ -1,10 +1,13 @@
 {% extends "base.html" %}
 
-{% load wagtailcore_tags %}
-
-{% block body_class %}template-homepage{% endblock %}
+{% load wagtailcore_tags wagtailimages_tags %}
 
 {% block content %}
-  {{ page.title|richtext }}
-  {{ page.body|richtext }}
+  <div>
+    <h1>{{ self.banner_title }}</h1>
+    <div>{{ self.banner_subtitle|richtext }}</div>
+    {% if self.banner_cta %}
+        <a href="#">Link</a>
+    {% endif %}
+  </div>    
 {% endblock %}
