--- a/blog/templates/blog/blog_index_page.html
+++ b/blog/templates/blog/blog_index_page.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% load wagtailcore_tags wagtailimages_tags %}
+{% load wagtailcore_tags wagtailimages_tags blogapp_tags %}
 
 {% block body_class %}template-blogindexpage{% endblock %}
 
@@ -11,7 +11,7 @@
 
 {% for article in articlepages %}
     {% with article=article.specific %}
-        <h2><a href="{% pageurl article %}">{{ article.title }}</a></h2>
+        <h2><a href="{% post_date_url article page %}">{{ article.title }}</a></h2>
 
         {% with article.main_image as main_image %}
             {% if main_image %}{% image main_image fill-160x100 %}{% endif %}
