--- a/ctrlz/templates/menus/main/menu.html
+++ b/ctrlz/templates/menus/main/menu.html
@@ -7,4 +7,8 @@
       </li>
     {% endfor %}
   </ul>
+  <form action="{% url 'search' %}" method="get">
+    <input type="text" name="query"{% if search_query %} value="{{ search_query }}"{% endif %}>
+    <input type="submit" value="Search" class="button">
+  </form>
 </div>
