--- a/ctrlz/templates/menus/flat/footer/menu.html
+++ b/ctrlz/templates/menus/flat/footer/menu.html
@@ -1,10 +1,12 @@
-<footer>
-  <h4><a href="/">ctrl z </a></h4>
-  <ul class="nav navbar-nav">
-    {% for item in menu_items %}
-      <li>
-        <a href="{{item.href}}">{{item.text}}</a>
-      </li>
-    {% endfor %}
-  </ul>
+<footer class="footer">
+  <div class="content has-text-centered">
+      <h4><a href="/">ctrlz </a></h4>
+      <ul class="nav navbar-nav">
+        {% for item in menu_items %}
+          <li>
+            <a href="{{item.href}}">{{item.text}}</a>
+          </li>
+        {% endfor %}
+      </ul>
+  </div>
 </footer>
