--- a/ctrlz/templates/menus/main/menu.html
+++ b/ctrlz/templates/menus/main/menu.html
@@ -1,14 +1,28 @@
-<div>
-  <h1><a href="/">ctrl z </a></h1>
-  <ul class="nav navbar-nav">
-    {% for item in menu_items %}
-      <li>
-        <a href="{{item.href}}">{{item.text}}</a>
-      </li>
-    {% endfor %}
-  </ul>
-  <form action="{% url 'search' %}" method="get">
-    <input type="text" name="query"{% if search_query %} value="{{ search_query }}"{% endif %}>
-    <input type="submit" value="Search" class="button">
-  </form>
-</div>
+<nav class="navbar is-light" role="navigation" aria-label="main navigation">
+  <div class="navbar-brand">
+    <a class="navbar-item" href="/">ctrlz</a>
+
+    <a role="button" class="navbar-burger burger" aria-label="menu" aria-expanded="false" data-target="navbar">
+      {% for item in menu_items %}
+        <span aria-hidden="true"></span>
+      {% endfor %}
+    </a>
+  </div>
+
+  <div id="navbar" class="navbar-menu">
+    <div class="navbar-start">
+      {% for item in menu_items %}
+        <a href="{{item.href}}" class="navbar-item">{{item.text}}</a>
+      {% endfor %}
+    </div>
+
+    <div class="navbar-end">
+      <div class="navbar-item">
+        <form action="{% url 'search' %}" method="get">
+          <input type="text" name="query"{% if search_query %} value="{{ search_query }}"{% endif %}>
+          <input type="submit" value="Search" class="button">
+         </form>
+      </div>
+    </div>
+  </div>
+</nav>
