--- a/home/templates/home/home_page.html
+++ b/home/templates/home/home_page.html
@@ -1,16 +1,16 @@
 {% extends "base.html" %}
 
-{% load wagtailcore_tags wagtailimages_tags %}
+{% load wagtailcore_tags wagtailimages_tags recent_tags %}
 
 {% block content %}
   <div>
-    <h2>{{ self.banner_title }}</h2>
-    <div>{{ self.banner_subtitle|richtext }}</div>
-    {% if self.banner_cta %}
-        <a href="#">Link</a>
-    {% endif %}
+    <div>
+      {% for block in page.content %}
+          {% include_block block %}
+      {% endfor %}
+    </div>
+    <div>
+      {% recent_articles %}
+    </div>
   </div>    
-  {% for block in page.banner %}
-      {% include_block block %}
-  {% endfor %}
 {% endblock %}
