--- a/ctrlz/templates/menus/flat/footer/menu.html
+++ b/ctrlz/templates/menus/flat/footer/menu.html
@@ -1,6 +1,6 @@
 <footer class="footer">
   <div class="content has-text-centered">
-      <h4><a href="/">ctrlz </a></h4>
+      <h4><a href="/">total ctrl</a></h4>
       <ul class="nav navbar-nav">
         {% for item in menu_items %}
           <li>
