--- a/ctrlz/templates/menus/main/menu.html
+++ b/ctrlz/templates/menus/main/menu.html
@@ -1,6 +1,6 @@
 <nav class="navbar is-light" role="navigation" aria-label="main navigation">
   <div class="navbar-brand">
-    <a class="navbar-item" href="/">ctrlz</a>
+    <a class="navbar-item" href="/">total ctrl</a>
 
     <a role="button" class="navbar-burger burger" aria-label="menu" aria-expanded="false" data-target="navbar">
       {% for item in menu_items %}
