--- a/home/templates/home/home_page.html
+++ b/home/templates/home/home_page.html
@@ -10,6 +10,7 @@
       {% endfor %}
     </div>
     <div>
+      <div class="is-divider" data-content="OR"></div>
       {% recent_articles %}
     </div>
   </div>    
